--- a/editors/nano/Makefile
+++ b/editors/nano/Makefile
@@ -25,7 +25,7 @@ MAKE_JOBS_SAFE=	yes
 .include <bsd.port.options.mk>
 
 .if ${PORT_OPTIONS:MNLS}
-USE_GETTEXT=	yes
+USES+=		gettext
 PLIST_SUB+=	NLS=""
 MANLANG=	"" fr
 .else
