--- a/x11-wm/icewm/Makefile
+++ b/x11-wm/icewm/Makefile
@@ -74,7 +74,7 @@ STARTUP_PIXMAP=	icewm-logo.xpm
 .endif
 
 .if ${PORT_OPTIONS:MNLS}
-USE_GETTEXT=	yes
+USES+=		gettext
 PLIST_SUB+=	NLS=""
 .else
 CONFIGURE_ARGS+=--disable-nls --disable-i18n
