- Update master site
PR:		ports/177430
Submitted by:	milki <milki@rescomp.berkeley.edu> (maintainer)


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316471 35697150-7ecd-e111-bb59-0022644237b5

--- a/devel/gitolite/Makefile
+++ b/devel/gitolite/Makefile
@@ -4,7 +4,7 @@ PORTNAME=	gitolite
 PORTVERSION=	3.5.1
 PORTEPOCH=	1
 CATEGORIES=	devel
-MASTER_SITES=	http://milki.github.com/${PORTNAME}/ \
+MASTER_SITES=	http://milki.github.io/${PORTNAME}/ \
 		LOCAL/tdb
 
 MAINTAINER=	milki@rescomp.berkeley.edu
