- Convert to OptionsNG - Trim headers while here
PR:		ports/177161
Submitted by:	milki <milki@rescomp.berkeley.edu> (maintainer)


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316473 35697150-7ecd-e111-bb59-0022644237b5

--- a/lang/p5-Test-XPath/Makefile
+++ b/lang/p5-Test-XPath/Makefile
@@ -1,9 +1,4 @@
-# New ports collection makefile for:	p5-Test-XPath
-# Date created:		25 April 2010
-# Whom:		milki
-#
 # $FreeBSD$
-#
 
 PORTNAME=	Test-XPath
 PORTVERSION=	0.16
@@ -24,16 +19,18 @@ PERL_MODBUILD=	yes
 
 MAN3=		Test::XPath.3
 
-OPTIONS=	CSS "Include CSS selectors" Off \
-		PODT "Include Pod package test dependencies" Off
+OPTIONS_DEFINE=	CSS PODT
+
+CSS_DESC=	Include CSS selectors
+PODT_DESC=	Include Pod package test dependencies
 
 .include <bsd.port.options.mk>
 
-.if !defined(WITHOUT_CSS)
+.if ${PORT_OPTIONS:MCSS}
 RUN_DEPENDS+=	p5-HTML-Selector-XPath>=0.06:${PORTSDIR}/www/p5-HTML-Selector-XPath
 .endif
 
-.if !defined(WITHOUT_PODT)
+.if ${PORT_OPTIONS:MPODT}
 TEST_DEPENDS+=	p5-Pod-Coverage>=0:${PORTSDIR}/devel/p5-Pod-Coverage \
 		p5-Test-Pod>=1.41:${PORTSDIR}/devel/p5-Test-Pod
 .endif
