Update audio/kaudiocreator to 1.3.
Make the port NLS aware and make portlint happier.

ChangeLog:
1.3
- bump version ;-)

1.2.95 (1.3 rc)
- bugfixes

Approved by:	eadler,bdrewery (mentors, implicit)


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316474 35697150-7ecd-e111-bb59-0022644237b5

--- a/audio/kaudiocreator/Makefile
+++ b/audio/kaudiocreator/Makefile
@@ -2,14 +2,15 @@
 # $FreeBSD$
 
 PORTNAME=	kaudiocreator
-PORTVERSION=	1.2.90
-PORTREVISION=	6
+PORTVERSION=	1.3
 CATEGORIES=	audio kde
 MASTER_SITES=	http://kde-look.org/CONTENT/content-files/
 DISTNAME=	107645-${PORTNAME}-${PORTVERSION}
 
 MAINTAINER=	dbn@FreeBSD.org
 COMMENT=	Audio-cd ripper and encoder for KDE4
+
+LICENSE=	GPLv2
 
 LIB_DEPENDS=	discid:${PORTSDIR}/audio/libdiscid \
 		tag:${PORTSDIR}/audio/taglib
@@ -24,9 +25,22 @@ USES=		cmake
 USE_QT4=	moc_build qmake_build rcc_build uic_build
 USE_KDE4=	automoc4 kdehier kdeprefix libkcddb libkcompactdisc
 
-LICENSE=	GPLv2
 MAKE_JOBS_SAFE=	yes
-
 WRKSRC=		${WRKDIR}/${PORTNAME}-${PORTVERSION}
+
+OPTIONS_DEFINE=	NLS
+
+.include <bsd.port.options.mk>
+
+.if ${PORT_OPTIONS:MNLS}
+USE_GETTEXT=	yes
+PLIST_SUB+=	NLS=""
+.else
+PLIST_SUB+=	NLS="@comment "
+
+post-patch:
+	${REINPLACE_CMD} 's,add_subdirectory(po),,' ${WRKSRC}/CMakeLists.txt
+
+.endif
 
 .include <bsd.port.mk>
