Add PORTSCOUT variable.
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316476 35697150-7ecd-e111-bb59-0022644237b5

--- a/print/jabref/Makefile
+++ b/print/jabref/Makefile
@@ -16,6 +16,8 @@ COMMENT=	BibTeX native bibliographic reference manager
 LICENSE=	GPLv2 GPLv3
 LICENSE_COMB=	dual
 
+PORTSCOUT=	limit:.*[0-9]$$
+
 USE_JAVA=	yes
 JAVA_VERSION=	1.6+
 NO_BUILD=	yes
