--- a/databases/py-swiftclient/Makefile
+++ b/databases/py-swiftclient/Makefile
@@ -2,7 +2,7 @@
 # $FreeBSD$
 
 PORTNAME=	swiftclient
-PORTVERSION=	1.3.0
+PORTVERSION=	1.4.0
 CATEGORIES=	databases python
 MASTER_SITES=	CHEESESHOP
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
@@ -21,5 +21,12 @@ PYDISTUTILS_PKGNAME=	python_${PORTNAME}
 
 PLIST_FILES=	bin/swift \
 		%%PYTHON_SITELIBDIR%%/%%PYEASYINSTALL_EGG%%
+
+MAN1=		swift.1
+
+post-install:
+.for i in ${MAN1}
+	${INSTALL_MAN} ${WRKSRC}/doc/manpages/${i} ${MANPREFIX}/man/man1/${i}
+.endfor
 
 .include <bsd.port.mk>
