- convert USE_GETTEXT to USES
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316484 35697150-7ecd-e111-bb59-0022644237b5

--- a/deskutils/xpad-current/Makefile
+++ b/deskutils/xpad-current/Makefile
@@ -31,7 +31,7 @@ USE_GMAKE=	yes
 
 #code currently doesn't properly handle --disable-nls (in next upstream milestone)
 .if ${PORT_OPTIONS:MNLS}
-USE_GETTEXT=	yes
+USES+=		gettext
 PLIST_SUB+=	NLS=""
 .else
 CONFIGURE_ARGS+=	--disable-nls
