--- a/textproc/p5-Hailo/Makefile
+++ b/textproc/p5-Hailo/Makefile
@@ -43,7 +43,7 @@ TEST_DEPENDS=	p5-DBD-SQLite>=1.29:${PORTSDIR}/databases/p5-DBD-SQLite \
 		p5-Test-Script-Run>=0.04:${PORTSDIR}/devel/p5-Test-Script-Run \
 		p5-Test-Synopsis>=0.06:${PORTSDIR}/devel/p5-Test-Synopsis
 
-PERL_CONFIGURE=	yes
+PERL_CONFIGURE=	5.10.0+
 
 MAN1=		hailo.1
 
@@ -75,10 +75,9 @@ OPTIONS_DEFAULT=	SQLITE
 RUN_DEPENDS+=	p5-DBD-SQLite>=1.29:${PORTSDIR}/databases/p5-DBD-SQLite
 .endif
 
-.if ${PORT_OPTIONS:MPSQL}
+.if ${PORT_OPTIONS:MPGSQL}
 RUN_DEPENDS+=	p5-DBD-Pg>=0:${PORTSDIR}/databases/p5-DBD-Pg
 .endif
-
 .if ${PORT_OPTIONS:MMYSQL}
 RUN_DEPENDS+=	p5-DBD-mysql>=0:${PORTSDIR}/databases/p5-DBD-mysql
 .endif
