- Take maintainership since I use this
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316489 35697150-7ecd-e111-bb59-0022644237b5

--- a/security/keepassx/Makefile
+++ b/security/keepassx/Makefile
@@ -8,7 +8,7 @@ CATEGORIES=	security
 MASTER_SITES=	SF/${PORTNAME:L}/KeePassX/${PORTVERSION}/
 DISTNAME=	${PORTNAME:L}-${PORTVERSION}
 
-MAINTAINER=	ports@FreeBSD.org
+MAINTAINER=	swills@FreeBSD.org
 COMMENT=	Cross Platform Password Manager
 
 RUN_DEPENDS=	update-mime-database:${PORTSDIR}/misc/shared-mime-info
