- Add missing module dir
PR:		ports/177729
Submitted by:	Edward <edward@rdtan.net>


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316490 35697150-7ecd-e111-bb59-0022644237b5

--- a/sysutils/puppet/Makefile
+++ b/sysutils/puppet/Makefile
@@ -95,6 +95,7 @@ post-install:
 		--vardir=/var/lib/puppet \
 		--logdir=/var/log/puppet \
 		> ${ETCDIR}/puppet.conf-dist
+	${MKDIR} -p ${ETCDIR}/modules
 	@${ECHO} ${RUBY_SITELIBDIR}/puppet.rb | \
 		${SED} 's,^${PREFIX}/,,' >> ${TMPPLIST}
 	@${ECHO} ${RUBY_SITELIBDIR}/semver.rb | \
