Convert to USES=gettext
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316503 35697150-7ecd-e111-bb59-0022644237b5

--- a/audio/gogglesmm/Makefile
+++ b/audio/gogglesmm/Makefile
@@ -69,7 +69,7 @@ CONFIGURE_ARGS+=	--without-curl
 
 .if ${PORT_OPTIONS:MNLS}
 PLIST_SUB=	NLS=""
-USE_GETTEXT=	yes
+USES+=		gettext
 .else
 CONFIGURE_ARGS+=--disable-nls
 PLIST_SUB=	NLS="@comment "
