- Fix problem that options dialog is popd up even if there is already   saved file.
- Remove CONFLICTS because it matches databases/ruby-bdb itself
  (Spotted by portlint).

PR:		ports/178107
Submitted by:	Yasuhiro KIMURA <yasu@utahime.org>


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316506 35697150-7ecd-e111-bb59-0022644237b5

--- a/databases/ruby-bdb/Makefile
+++ b/databases/ruby-bdb/Makefile
@@ -18,9 +18,8 @@ COMMENT=	Ruby interface to Oracle Berkeley DB revision 2 or later
 USE_BDB=	yes
 USE_BZIP2=	yes
 
-CONFLICTS=	${PKGNAMEPREFIX}${PORTNAME}[2-4]*
-
 OPTIONS_DEFINE=	DOCS EXAMPLES
+OPTIONSFILE=	${PORT_DBDIR}/ruby-${PORTNAME}/options
 
 USE_RUBY=		yes
 USE_RUBY_EXTCONF=	yes
