--- a/www/p5-HTTP-BrowserDetect/Makefile
+++ b/www/p5-HTTP-BrowserDetect/Makefile
@@ -2,7 +2,7 @@
 # $FreeBSD$
 
 PORTNAME=	HTTP-BrowserDetect
-PORTVERSION=	1.50
+PORTVERSION=	1.51
 CATEGORIES=	www perl5
 MASTER_SITES=	CPAN
 MASTER_SITE_SUBDIR=	CPAN:OALDERS
@@ -15,7 +15,9 @@ LICENSE=	ART10 GPLv1
 LICENSE_COMB=	dual
 
 TEST_DEPENDS=	p5-File-Slurp>=0:${PORTSDIR}/devel/p5-File-Slurp \
-		p5-Test-NoWarnings>=0:${PORTSDIR}/devel/p5-Test-NoWarnings
+		p5-Test-NoWarnings>=0:${PORTSDIR}/devel/p5-Test-NoWarnings \
+		p5-Test-FailWarnings>=0:${PORTSDIR}/devel/p5-Test-FailWarnings \
+		p5-Test-Most>=0:${PORTSDIR}/devel/p5-Test-Most
 
 PERL_CONFIGURE=	yes
 
