- Add delay when x11/slock is used (xflock4 script)
While I'm here,
- Adopt USES for desktop-file-utils, gettext, and athfix
- Add patch when NLS is unset

PR:		178090
Submitted by:	tijl@


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316522 35697150-7ecd-e111-bb59-0022644237b5

--- a/x11-wm/xfce4-session/Makefile
+++ b/x11-wm/xfce4-session/Makefile
@@ -3,7 +3,7 @@
 
 PORTNAME=	xfce4-session
 PORTVERSION=	4.10.0
-PORTREVISION=	2
+PORTREVISION=	3
 CATEGORIES=	x11-wm xfce
 MASTER_SITES=	${MASTER_SITE_XFCE}
 DIST_SUBDIR=	xfce4
@@ -24,15 +24,15 @@ GNU_CONFIGURE=	yes
 INSTALLS_ICONS=	yes
 USE_BZIP2=	yes
 USE_GMAKE=	yes
-USE_GNOME=	gnomehack gtk20 glib20 intltool intlhack desktopfileutils
-USES=		pkgconfig
+USE_GNOME=	gtk20 glib20 intltool intlhack
+USES=		desktop-file-utils pathfix pkgconfig
 USE_LDCONFIG=	yes
 USE_XFCE=	configenv libmenu libutil panel xfconf
 USE_XORG=	x11 sm ice
 
 CONFIGURE_ARGS+=--enable-legacy-sm \
 		--disable-libgnome-keyring \
-		--with-xsession-prefix=${LOCALBASE}
+		--with-xsession-prefix=${PREFIX}
 
 SUB_FILES=	pkg-message
 PKGMESSAGE=	${WRKDIR}/pkg-message
@@ -46,7 +46,7 @@ PLIST_SUB=	VERSION="4.6"
 .include <bsd.port.options.mk>
 
 .if ${PORT_OPTIONS:MNLS}
-USE_GETTEXT=	yes
+USES+=	gettext
 CONFIGURE_ARGS+=	--enable-nls
 PLIST_SUB+=	NLS=""
 .else
@@ -62,6 +62,5 @@ post-install:
 	@${ECHO_MSG}
 	@${CAT} ${PKGMESSAGE}
 	@${ECHO_MSG}
-	@-update-desktop-database
 
 .include <bsd.port.mk>
