- Update to 1.5 [1] - Add LICENSE (Artistic 1 & GPL 1)
Changes:	http://search.cpan.org/dist/Log-Any-Adapter-Syslog/Changes
PR:		ports/178149 [1]
Submitted by:	Bill Brinzer <bill.brinzer@gmail.com> (maintainer)


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316524 35697150-7ecd-e111-bb59-0022644237b5

--- a/devel/p5-Log-Any-Adapter-Syslog/Makefile
+++ b/devel/p5-Log-Any-Adapter-Syslog/Makefile
@@ -1,12 +1,8 @@
-# New ports collection makefile for:	devel/p5-Log-Any-Adapter-Syslog
-# Date created:				10 Oct 2010
-# Whom:					Bill Brinzer <bill.brinzer@gmail.com>
-#
+# Created by: Bill Brinzer <bill.brinzer@gmail.com>
 # $FreeBSD$
-#
 
 PORTNAME=	Log-Any-Adapter-Syslog
-PORTVERSION=	1.3
+PORTVERSION=	1.5
 CATEGORIES=	devel perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
@@ -14,11 +10,15 @@ PKGNAMEPREFIX=	p5-
 MAINTAINER=	bill.brinzer@gmail.com
 COMMENT=	Send Log::Any logs to syslog
 
+LICENSE=	ART10 GPLv1
+LICENSE_COMB=	dual
+
 RUN_DEPENDS=	p5-Log-Any-Adapter>=0:${PORTSDIR}/devel/p5-Log-Any-Adapter \
 		p5-Unix-Syslog>=0:${PORTSDIR}/sysutils/p5-Unix-Syslog
 BUILD_DEPENDS:=	${RUN_DEPENDS}
 TEST_DEPENDS=	p5-Test-Exception>=0:${PORTSDIR}/devel/p5-Test-Exception \
-		p5-Test-MockModule>=0:${PORTSDIR}/devel/p5-Test-MockModule
+		p5-Test-MockModule>=0:${PORTSDIR}/devel/p5-Test-MockModule \
+		p5-Test-Warn>=0:${PORTSDIR}/devel/p5-Test-Warn
 
 PERL_CONFIGURE=	yes
 
