- Update to 2.0.6 . - Add SIDPLAY knob (C64 sid demux support)
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316528 35697150-7ecd-e111-bb59-0022644237b5

--- a/multimedia/vlc/Makefile
+++ b/multimedia/vlc/Makefile
@@ -2,8 +2,7 @@
 # $FreeBSD$
 
 PORTNAME=	vlc
-DISTVERSION=	2.0.5
-PORTREVISION=	3
+DISTVERSION=	2.0.6
 PORTEPOCH=	3
 CATEGORIES=	multimedia audio ipv6 net www
 MASTER_SITES=	http://download.videolan.org/pub/videolan/${PORTNAME}/${DISTVERSION:S/p/-pre/}/ \
@@ -30,7 +29,7 @@ OPTIONS_DEFINE=	A52 AALIB ASS AVAHI CACA DBUS DIRAC DOCS DTS DVDREAD \
 		SAMBA SCHROED SDL SHOUTCAST SKINS STREAM SPEEX SQLITE SVG \
 		TAGLIB THEORA TWOLAME UPNP V4L VAAPI VCD VORBIS \
 		X11 X264 XCB XOSD XVIDEO ZVBI SERVER_ONLY DEBUG \
-		NO_DVD LIBBLURAY SAMPLERATE
+		NO_DVD LIBBLURAY SAMPLERATE SIDPLAY
 OPTIONS_DEFAULT=A52 AVAHI DBUS DTS DVDREAD DVDNAV FAAD FLAC GLX GNUTLS \
 		HTTPD LUA MAD MATROSKA MPEG2 OGG OPUS PNG QT4 REALAUDIO \
 		SDL SKINS STREAM SPEEX TAGLIB THEORA TWOLAME V4L \
@@ -49,6 +48,7 @@ REALAUDIO_DESC=	Real Audio(R) support
 RUNROOT_DESC=	Enable running as root
 SAMBA_DESC=	SAMBA Access module
 SCHROED_DESC=	Schroedinger decoder
+SIDPLAY_DESC=	C64 sid demux support
 SKINS_DESC=	winamp skins interface
 STREAM_DESC=	stream output
 TAGLIB_DESC=	ID3 tag and Ogg comment support
@@ -66,6 +66,7 @@ USE_GMAKE=	yes
 USE_ICONV=	yes
 USE_PERL5_BUILD=yes
 USE_GL=yes
+USE_CSTD=	gnu99
 MAKE_JOBS_SAFE=	yes
 WANT_GNOME=	yes
 
@@ -493,6 +494,14 @@ CONFIGURE_ARGS+=--enable-schroedinger
 CONFIGURE_ARGS+=--disable-schroedinger
 .endif
 
+.if ${PORT_OPTIONS:MSIDPLAY}
+LIB_DEPENDS+=	sidplay2:${PORTSDIR}/audio/libsidplay2
+LDFLAGS+=	-L${LOCALBASE}/lib/sidplay/builders
+CONFIGURE_ARGS+=--enable-sid
+.else
+CONFIGURE_ARGS+=--disable-sid
+.endif
+
 .if ${PORT_OPTIONS:MSDL} && ${PORT_OPTIONS:MXCB}
 WANT_SDL=	yes
 USE_SDL=	image
@@ -715,6 +724,7 @@ RUN_DEPENDS+=	${LOCALBASE}/lib/X11/fonts/bitstream-vera/Vera.ttf:${PORTSDIR}/x11
 post-patch:
 	@${REINPLACE_CMD} -e 's|/usr/local|${LOCALBASE}|g' \
 		-e '\|LIBS|s|-lrt||' \
+		-e '/PKG_CONFIG.*lib.*</s|libavcodec <|libavcodec${FFMPEG_SUFFIX} <|' \
 		${WRKSRC}/configure
 	@${REINPLACE_CMD} -e 's|/usr/share/fonts/truetype/freefont/FreeSerifBold.ttf|${WITH_VLC_DEFAULT_FONT}|' \
 		${WRKSRC}/modules/text_renderer/freetype.c
@@ -793,7 +803,7 @@ pre-install:
 .if ${PORT_OPTIONS:MNLS}
 	cd ${FAKEDIR}/share/locale && ${FIND} -s * -type f -o -type l | \
 		${SED} -e 's|^|share/locale/|' >> ${PLIST}
-.for locale in ach cgg bn_IN ckb co ff fur gd ia kk km kmr lg my oc ps tet tl zu
+.for locale in ach an cgg bn_IN ckb co ff fur gd ia kk km kmr lg my oc ps tet tl zu
 	${ECHO_CMD} "@dirrmtry share/locale/${locale}/LC_MESSAGES" >> ${PLIST}
 	${ECHO_CMD} "@dirrmtry share/locale/${locale}" >> ${PLIST}
 .endfor
