Switch to using USE_MYSQL instead of explicitly depending on mysqlclient library.
Suggested by:	Florian Smeets


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316532 35697150-7ecd-e111-bb59-0022644237b5

--- a/databases/tcl-Mysql/Makefile
+++ b/databases/tcl-Mysql/Makefile
@@ -16,8 +16,7 @@ EXTRACT_SUFX=	.tgz
 MAINTAINER=	mi@aldan.algebra.com
 COMMENT=	TCL module for accessing MySQL databases
 
-LIB_DEPENDS=	mysqlclient:${PORTSDIR}/databases/mysql41-client
-
+USE_MYSQL=	41+
 USE_TCL=	84+
 TCL_NODOT=	tcl${TCL_VER:S/.//}
 WRKSRC=		${WRKDIR}/tcl-sql/
