- Fix DISTFILES - Remove post-install target
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316535 35697150-7ecd-e111-bb59-0022644237b5

--- a/print/foxitreader/Makefile
+++ b/print/foxitreader/Makefile
@@ -32,7 +32,7 @@ WRKSRC=	${WRKDIR}/${PORTVERSION:R}-release
 .include <bsd.port.options.mk>
 
 .if ${PORT_OPTIONS:MDOCS}
-DISTFILES+=FoxitReader${PORTVERSION:R}ForLinux_Manual.pdf:doc
+DISTFILES+=FoxitReader${PORTVERSION:R}ForLinux_Manual.pdf:manual
 .endif
 .if ${PORT_OPTIONS:MNLS}
 NLS=	""
@@ -54,8 +54,5 @@ do-install:
 	${MKDIR} ${DOCSDIR} && \
 	${INSTALL_DATA} ${DISTDIR}/FoxitReader${PORTVERSION:R}ForLinux_Manual.pdf ${DOCSDIR}
 .endif
-
-post-install:
-	${CAT} ${PKGMESSAGE}
 
 .include <bsd.port.mk>
