--- a/graphics/libcdr/Makefile
+++ b/graphics/libcdr/Makefile
@@ -1,7 +1,7 @@
 # $FreeBSD$
 
 PORTNAME=	libcdr
-PORTVERSION=	0.0.12
+PORTVERSION=	0.0.13
 CATEGORIES=	graphics devel
 MASTER_SITES=	http://dev-www.libreoffice.org/src/
 
@@ -11,6 +11,7 @@ COMMENT=	Library and tools for parsing Corel Draw file format
 LICENSE=	LGPL21 MPL GPLv2
 LICENSE_COMB=	dual
 
+BUILD_DEPENDS=	${LOCALBASE}/include/boost/optional.hpp:${PORTSDIR}/devel/boost-libs
 LIB_DEPENDS=	icui18n:${PORTSDIR}/devel/icu \
 		wpd-0.9:${PORTSDIR}/textproc/libwpd \
 		wpg-0.2:${PORTSDIR}/graphics/libwpg \
@@ -22,6 +23,7 @@ CONFIGURE_ARGS=	--disable-werror --without-docs
 USES=	pathfix pkgconfig
 USE_LDCONFIG=	yes
 
+CPPFLAGS+=	-I${LOCALBASE}/include
 CXXFLAGS+=	-Wno-long-long
 
 .include <bsd.port.mk>
