- Update to 0.9.10 - Use USES=pathfix - Cleanup Makefile
Changes:	http://sourceforge.net/projects/check/files/check/0.9.10/NEWS-README-0.9.10.txt/view


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316540 35697150-7ecd-e111-bb59-0022644237b5

--- a/devel/libcheck/Makefile
+++ b/devel/libcheck/Makefile
@@ -2,7 +2,7 @@
 # $FreeBSD$
 
 PORTNAME=	libcheck
-PORTVERSION=	0.9.9
+PORTVERSION=	0.9.10
 CATEGORIES=	devel
 MASTER_SITES=	SF/check/check/${PORTVERSION}
 DISTNAME=	check-${PORTVERSION}
@@ -14,14 +14,12 @@ LICENSE=	LGPL21
 
 OPTIONS_DEFINE=	DOCS EXAMPLES
 
-#CONFIGURE_ARGS=	--docdir=${DOCSDIR}
 CONFIGURE_ENV=	ac_cv_path_AWK_PATH=${AWK}
 GNU_CONFIGURE=	yes
 USE_GMAKE=	yes
 USE_LDCONFIG=	yes
+USES=		pathfix
 
-#DOCSDIR=	${PREFIX}/share/doc/check
-#EXAMPLESDIR=	${PREFIX}/share/examples/check
 INFO=		check
 MAN1=		checkmk.1
 
@@ -31,7 +29,6 @@ post-patch:
 	@${REINPLACE_CMD} \
 		-e 's|COPYING.LESSER||' \
 		-e '/^docdir = / s|$$(PACKAGE)|${PORTNAME}|' \
-		-e '/^pcdatadir = / s|(libdir)/pkgconfig|(exec_prefix)/libdata/pkgconfig|' \
 			${WRKSRC}/Makefile.in
 	@${REINPLACE_CMD} \
 		-e '/^exampledir = / s|(docdir)/example|(datadir)/examples/${PORTNAME}|' \
