Fix a regression that had crept in with r314621.  Do not bump PORTREVISION because this does not affect the default package.
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316548 35697150-7ecd-e111-bb59-0022644237b5

--- a/mail/postfix27/Makefile
+++ b/mail/postfix27/Makefile
@@ -228,7 +228,7 @@ PLIST_SUB+=	TEST="@comment "
 PKGNAMESUFFIX=	-base
 PREFIX=		/usr
 ETCDIR=		/etc/postfix
-USE_RC_SUBR=	postfix
+USE_RCORDER=	postfix
 PLIST_SUB+=	BASE=""
 .else
 USE_RC_SUBR=	postfix
