- Update to 1.1.0 - Update pkg-plist - Remove unnecessary RUN_DEPENDS - Update USE_PYTHON version compatibility - Update regression-test: target - Update pkg-descr and WWW: tab->space - Remove unnecessary patches
Changes: https://github.com/kennethreitz/requests/blob/v1.1.0/HISTORY.rst

PR:		ports/174646
Submitted by:	rene, Alexey V. Degtyarev <alexey@renatasystems.org>
Approved by:	eadler (mentor)


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316554 35697150-7ecd-e111-bb59-0022644237b5

--- a/www/py-requests/Makefile
+++ b/www/py-requests/Makefile
@@ -2,7 +2,7 @@
 # $FreeBSD$
 
 PORTNAME=	requests
-PORTVERSION=	0.14.1
+PORTVERSION=	1.1.0
 CATEGORIES=	www python
 MASTER_SITES=	CHEESESHOP
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
@@ -12,14 +12,10 @@ COMMENT=	HTTP library written in Python for human beings
 
 LICENSE=	ISCL
 
-RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}certifi>0:${PORTSDIR}/security/py-certify \
-		${PYTHON_PKGNAMEPREFIX}oauthlib>=0.1.0:${PORTSDIR}/security/py-oauthlib
-
-USE_PYTHON=	-3.1
+USE_PYTHON=		yes
 USE_PYDISTUTILS=	easy_install
 
-test: build
-	${TOUCH} ${WRKSRC}/tests/__init__.py
-	cd ${WRKSRC} && ${PYTHON_CMD} ${PYSETUP} test
+regression-test: build
+	@cd ${WRKSRC} && ${PYTHON_CMD} test_requests.py
 
 .include <bsd.port.mk>
