--- a/textproc/p5-CSS-Minifier/Makefile
+++ b/textproc/p5-CSS-Minifier/Makefile
@@ -1,9 +1,5 @@
-# New ports collection makefile for:	p5-CSS-Minifier
-# Date created:		2011-09-03
-# Whom:			Sunpoet Po-Chuan Hsieh <sunpoet@FreeBSD.org>
-#
+# Created by: Sunpoet Po-Chuan Hsieh <sunpoet@FreeBSD.org>
 # $FreeBSD$
-#
 
 PORTNAME=	CSS-Minifier
 PORTVERSION=	0.01
@@ -13,6 +9,9 @@ PKGNAMEPREFIX=	p5-
 
 MAINTAINER=	sunpoet@FreeBSD.org
 COMMENT=	Perl extension for minifying CSS
+
+LICENSE=	ART10 GPLv1
+LICENSE_COMB=	dual
 
 PERL_CONFIGURE=	yes
 
