- Add LICENSE - Cleanup Makefile header - Use single space after WWW:
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316561 35697150-7ecd-e111-bb59-0022644237b5

--- a/textproc/p5-JavaScript-Minifier/Makefile
+++ b/textproc/p5-JavaScript-Minifier/Makefile
@@ -1,9 +1,5 @@
-# New ports collection makefile for:	p5-JavaScript-Minifier
-# Date created:		2011-08-03
-# Whom:			Kurt Lidl <kurt.lidl@cello.com>
-#
+# Created by: Kurt Lidl <kurt.lidl@cello.com>
 # $FreeBSD$
-#
 
 PORTNAME=	JavaScript-Minifier
 PORTVERSION=	1.05
@@ -15,8 +11,11 @@ PKGNAMEPREFIX=	p5-
 MAINTAINER=	perl@FreeBSD.org
 COMMENT=	JavaScript whitespace/comment eliminator
 
+LICENSE=	ART10 GPLv1
+LICENSE_COMB=	dual
+
 PERL_CONFIGURE=	yes
 
-MAN3=	JavaScript::Minifier.3
+MAN3=		JavaScript::Minifier.3
 
 .include <bsd.port.mk>
