--- a/textproc/p5-JavaScript-Minifier-XS/Makefile
+++ b/textproc/p5-JavaScript-Minifier-XS/Makefile
@@ -1,9 +1,5 @@
-# New ports collection makefile for:	JavaScript-Minifier-XS
-# Date created:	   18 Jul 2008
-# Whom:		   Sergey Skvortsov <skv@protey.ru>
-#
+# Created by: Sergey Skvortsov <skv@protey.ru>
 # $FreeBSD$
-#
 
 PORTNAME=	JavaScript-Minifier-XS
 PORTVERSION=	0.09
@@ -14,14 +10,15 @@ PKGNAMEPREFIX=	p5-
 MAINTAINER=	sunpoet@FreeBSD.org
 COMMENT=	XS based JavaScript minifier
 
+LICENSE=	ART10 GPLv1
+LICENSE_COMB=	dual
+
+TEST_DEPENDS=	p5-JavaScript-Minifier>=0:${PORTSDIR}/textproc/p5-JavaScript-Minifier \
+		p5-Test-Pod>=1:${PORTSDIR}/devel/p5-Test-Pod \
+		p5-Test-Pod-Coverage>=1:${PORTSDIR}/devel/p5-Test-Pod-Coverage
+
 PERL_CONFIGURE=	yes
 
 MAN3=		JavaScript::Minifier::XS.3
 
-.include <bsd.port.pre.mk>
-
-.if ${PERL_LEVEL} < 501200
-BUILD_DEPENDS+=	p5-Module-Build>=0.3500:${PORTSDIR}/devel/p5-Module-Build
-.endif
-
-.include <bsd.port.post.mk>
+.include <bsd.port.mk>
