--- a/textproc/p5-Text-Padding/Makefile
+++ b/textproc/p5-Text-Padding/Makefile
@@ -1,9 +1,5 @@
-# New ports collection makefile for:	p5-Text-Padding
-# Date created:		2011-10-10
-# Whom:			Sunpoet Po-Chuan Hsieh <sunpoet@FreeBSD.org>
-#
+# Created by: Sunpoet Po-Chuan Hsieh <sunpoet@FreeBSD.org>
 # $FreeBSD$
-#
 
 PORTNAME=	Text-Padding
 PORTVERSION=	1.110.170
@@ -15,21 +11,16 @@ DISTNAME=	${PORTNAME}-${PORTVERSION:R}${PORTVERSION:E}
 MAINTAINER=	sunpoet@FreeBSD.org
 COMMENT=	Simple way of formatting a text
 
+LICENSE=	ART10 GPLv1
+LICENSE_COMB=	dual
+
 BUILD_DEPENDS=	p5-Moose>=0:${PORTSDIR}/devel/p5-Moose \
 		p5-MooseX-Has-Sugar>=0:${PORTSDIR}/devel/p5-MooseX-Has-Sugar \
 		p5-Text-Truncate>=0:${PORTSDIR}/textproc/p5-Text-Truncate
-RUN_DEPENDS=	p5-Moose>=0:${PORTSDIR}/devel/p5-Moose \
-		p5-MooseX-Has-Sugar>=0:${PORTSDIR}/devel/p5-MooseX-Has-Sugar \
-		p5-Text-Truncate>=0:${PORTSDIR}/textproc/p5-Text-Truncate
+RUN_DEPENDS:=	${BUILD_DEPENDS}
 
-PERL_MODBUILD=	5.12.0+
+PERL_MODBUILD=	yes
 
 MAN3=		Text::Padding.3
 
-.include <bsd.port.pre.mk>
-
-.if ${PERL_LEVEL} < 501001
-TEST_DEPENDS+=	p5-Test-Simple>=0.88:${PORTSDIR}/devel/p5-Test-Simple
-.endif
-
-.include <bsd.port.post.mk>
+.include <bsd.port.mk>
